--- a/Exercicios/Cap 03/ex003.html
+++ b/Exercicios/Cap 03/ex003.html
@@ -11,6 +11,10 @@
 <body>
     <script>
         var nome = prompt('Bom dia! Qual é o seu nome?')
+        document.write('Bem vindo, ' + nome + '!')
+
+        var idade = prompt(nome + ", quantos anos você tem?")
+        document.write('<br>' + nome + ' tem ' + idade + ' anos.')
     </script>
 </body>
 </html>
